--- a/SoftUni HomeWorks/JavaScrip/Tic-Tac-Toe game/Tic-Tac-Toe_game.css
+++ b/SoftUni HomeWorks/JavaScrip/Tic-Tac-Toe game/Tic-Tac-Toe_game.css
@@ -3,11 +3,10 @@ body{
     padding:0;
     margin:0;
 }
-add comment and bug here
+//add comment and bug here
 td{
     width:50px;
     height:50px;
     border:3px solid black;
 }
 
-//No comments are needed here
